# Postgis_discrete_topology

./: .gitignore  CMakeLists.txt  LICENSE  README.md  postgis_discrete_topology.c  postgis_discrete_topology.control
docs/: architecture.md  contribution_guide.md  roadmap.md
examples/: example_usage.sql
sql/: postgis_discrete_topology--1.0.sql
tests/: test_cases.sql
